[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TreadI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gql[requests]>=3.5.0",
    "keyring>=25.6.0",
    "kivy>=2.3.1",
    "requests>=2.32.3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "Shane Loretz", email = "shane.loretz@gmail.com"},
]
maintainers = [
  {name = "Shane Loretz", email = "shane.loretz@gmail.com"},
]

[project.gui-scripts]
treadi = "treadi.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/treadi"]
