[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TreadI"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gql[requests]>=3.5.0",
    "keyring>=25.6.0",
    "kivy>=2.3.1",
    "requests>=2.32.3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "Shane Loretz", email = "shane.loretz@gmail.com"},
]
maintainers = [
  {name = "Shane Loretz", email = "shane.loretz@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Utilities",
]

[project.gui-scripts]
treadi = "treadi.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/treadi"]

[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "black>=25.1.0",
]
